[tool.poetry]
name = "bidask"
version = "2.1.0"
license = "MIT"
description = "Efficient Estimation of Bid-Ask Spreads from Open, High, Low, and Close Prices"
authors = ["Emanuele Guidotti <emanuele.guidotti@usi.ch>"]
readme = "README.md"
repository = "https://github.com/eguidotti/bidask"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
